DCS-1187 page content realigned Changes made following peer test conducted by design team 1. corrected the alignment of elements on the /choose-prisoner page, 2. central content of all pages made wider and is now the same as in the prototype.

--- a/assets/sass/application.sass
+++ b/assets/sass/application.sass
@@ -1,9 +1,11 @@
 $govuk-global-styles: true
 $path: "/assets/images/"
 
+$moj-page-width: 1170px
+$govuk-page-width: $moj-page-width
+
 @import 'govuk/all'
 @import 'moj/all'
-@import './components/common'
 @import './components/header-bar'
 @import './components/movement-card'
 @import './local'
